--- a/myayai-extension/package.json
+++ b/myayai-extension/package.json
@@ -20,8 +20,18 @@
     "clean": "rimraf dist/",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix --ignore-path .gitignore",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest tests/unit",
+    "test:integration": "jest tests/integration",
+    "test:e2e": "jest tests/e2e",
+    "test:performance": "jest tests/performance",
+    "test:accessibility": "jest tests/accessibility",
+    "test:all": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "validate": "npm run lint && npm run format:check && npm run test:all && npm run size-check",
     "pack": "node scripts/pack-extension.js",
     "pack:chrome": "node scripts/pack-extension.js --browsers chrome",
     "pack:firefox": "node scripts/pack-extension.js --browsers firefox",
@@ -30,6 +40,10 @@
     "serve:firefox": "web-ext run --source-dir=dist/firefox --browser-console",
     "analyze": "webpack-bundle-analyzer dist/chrome/js/*.js",
     "size-check": "bundlesize",
+    "performance:audit": "node scripts/performance-audit.js",
+    "accessibility:audit": "node scripts/accessibility-audit.js",
+    "security:audit": "npm audit --audit-level=moderate",
+    "release:prepare": "npm run validate && npm run build:all && npm run pack:all",
     "prebuild": "npm run clean",
     "prepack": "npm run build:all",
     "postinstall": "echo 'MyAyAI Extension build system ready! Run npm run build:all to get started.'"
